--- a/src/netstandard/TwicasDotNet.Test/TwicasDotNet.Test.csproj
+++ b/src/netstandard/TwicasDotNet.Test/TwicasDotNet.Test.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="urlHolderTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
