--- a/src/netstandard/TwicasDotNet/TwicasDotNet.csproj
+++ b/src/netstandard/TwicasDotNet/TwicasDotNet.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard1.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
+
 </Project>
